# lm-mit-momentum

./: .gitignore  CMakeLists.txt  QA.md  README.md  lm_setup.sh  making_terrain.md  making_terrain_lidar.md  template_goto.py  template_mission.py
ROMFS/: 1043_iris_lmlidar
cmake/: sitl_target.cmake
demos/: demo_gps_read.py  demo_lidar_read.py  demo_mission.py
models/iris_lmlidar/: iris_lmlidar.sdf  model.config
models/lmlidar/: model.config  model.sdf
plugin/: README.md  agl_debug.pb.cc  agl_debug.pb.h  agl_debug.proto  agl_tracker.cc  agl_tracker.hh
py3gazebo_setup/: pygazebo.py  setup.py
scritps/: set_home.sh
test/: README.md  coord_transfer.py  lsr_read.py  objs.pkl
tutorial/: tutorial_lidar.py
tutorial/demos/: demo_full_run.py  demo_full_run_goto.py  demo_full_run_mission.py  demo_gazebo_read.py  demo_gps_read.py  demo_mission.py
worlds/: terrain2d.world  terrain3d.world
worlds/models/terrain2d/: model.config  model.sdf
worlds/models/terrain2d/media/: test_terrain_2d.xcf
worlds/models/terrain3d/: model.config  model.sdf
